# workflows-boilerplate

./: .gitignore  AGENTS.md  README.md  pyproject.toml
directives/: TECHNICAL_SPECS.md  mcp-servers-guide.md
