[project]
name = "workflows-boilerplate"
version = "0.1.0"
description = "Boilerplate for building agentic workflows with Python and AI agents"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core dependencies
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # LLM Providers
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "litellm>=1.40.0",

    # Agentic Frameworks
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "crewai>=0.55.0",
    "crewai-tools>=0.8.0",
    "llama-index>=0.10.0",
    "llama-index-llms-anthropic>=0.1.0",
    "pydantic-ai>=0.0.10",

    # MCP Protocol
    "mcp>=1.0.0",

    # API & Web Framework
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",

    # Database & State Management
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis>=5.0.0",
    "chromadb>=0.5.0",

    # Task Queue
    "celery[redis]>=5.4.0",

    # Utilities
    "tenacity>=8.5.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.9",

    # Logging & Observability
    "structlog>=24.4.0",
    "langfuse>=2.40.0",

    # Web Scraping (optional)
    "beautifulsoup4>=4.12.0",
    "playwright>=1.45.0",

    # Google Workspace Integration (optional)
    "google-auth>=2.32.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.140.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",

    # Linting & Formatting
    "ruff>=0.5.0",

    # Pre-commit
    "pre-commit>=3.8.0",

    # Type checking
    "mypy>=1.11.0",
    "types-redis>=4.6.0",
    "types-requests>=2.32.0",
]

full = [
    # Microsoft AutoGen
    "pyautogen>=0.2.0",

    # Haystack
    "haystack-ai>=2.3.0",

    # Additional providers
    "mistralai>=1.0.0",
    "groq>=0.9.0",

    # Email
    "sendgrid>=6.11.0",

    # Slack/Discord
    "slack-sdk>=3.31.0",
    "discord.py>=2.4.0",

    # Payment
    "stripe>=10.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/workflows-boilerplate"
Documentation = "https://github.com/yourusername/workflows-boilerplate/blob/main/README.md"
Repository = "https://github.com/yourusername/workflows-boilerplate"
Issues = "https://github.com/yourusername/workflows-boilerplate/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from exceptions
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=execution",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "langfuse.*",
    "chromadb.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["execution"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
